# sc_2

./: CMakeLists.txt  LICENSE  README.md  customLabel.cxx  main.cpp  mainwindow.cxx  mainwindow.h  matrixdialog.cxx  matrixdialog.h  matrixdialog.ui  network.cpp  network.h  neuron.cpp  neuron.h  weightmatrix.h
AANN/: CMakeLists.txt  example_main.cpp  n_exeptions.h  network.cpp  network.h  neuron.cpp  neuron.h  weightmatrix.cpp  weightmatrix.h
gui/: CMakeLists.txt  customLabel.cxx  customLabel.h  main.cxx  mainwindow.cxx  mainwindow.h
